[project]
name = "lyra-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RodolfoFigueroa", email = "4rodolfofigueroa2@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.33.1",
    "types-requests>=2.33.0.20260408",
    "websockets>=16.0",
]

[project.scripts]
lyra-api = "lyra_api:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "geopandas>=1.1.3",
    "pre-commit>=4.6.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]